VersionPropEncoding - addresses latest PR comments